.opsera-sperichatgpt2/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opseratest-sperichatgpt2-dev
  labels:
    app: sperichatgpt2
    tenant: opseratest
